+ Given colour a smaller choice preview to avoid the picker overlapping it on lg with many items

--- a/src/components/form/stylesheets/image.scss
+++ b/src/components/form/stylesheets/image.scss
@@ -17,6 +17,6 @@
   }
 
   &__src {
-    max-height: 14rem;
+    max-height: 10rem;
   }
 }
