--- a/src/stylesheets/form.scss
+++ b/src/stylesheets/form.scss
@@ -3,8 +3,8 @@
 // App styling - Customised outside of formHack 1.2
 .form {
   margin: 0 auto;
-  opacity: .5;
-  width: 75%;
+  opacity: .6;
+  width: 95%;
 
   &:hover {
     opacity: 1;
@@ -15,7 +15,6 @@
     text-transform: capitalize;
   }
 }
-
 
 .checkbox-custom{
     opacity: 0;
